--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?MGJYB=1634351291"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?WCMYB=123700186"></script>
     </body>
 </html>
