--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?DEWYB=2121125338"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?QIFZB=568375142"></script>
     </body>
 </html>
