--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?MWLAC=1683844868"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?QUYZB=1020378235"></script>
     </body>
 </html>
