--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?AZVAC=1142300492"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?BLYAC=1645489409"></script>
     </body>
 </html>
