--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?MQVXB=620513686"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?DWIZB=2044202303"></script>
     </body>
 </html>
