--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?UYQZB=1628695759"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?OZJAC=439936860"></script>
     </body>
 </html>
