Oct28 Mouse Aim

--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?OZJAC=439936860"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?LDUZB=1466570671"></script>
     </body>
 </html>
