Nov 4th Better Aiming

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             }
             div.gm4html5_div_class
             {
-              margin: 0px;
+              position: fixed;
+              top: 50%;
+              left: 50%;
+              margin-left: -720px;
+              margin-top: -405px;
               padding: 0px;
               border: 0px;
             }
@@ -79,6 +83,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?LDUZB=1466570671"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?OPBYB=580088942"></script>
     </body>
 </html>
