--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?OPBYB=580088942"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?TQYZB=750530331"></script>
     </body>
 </html>
