--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MetalAndLight.js?ZSBYB=477766607"></script>
+        <script type="text/javascript" src="html5game/MetalAndLight.js?TABBC=1116323037"></script>
     </body>
 </html>
