--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/.git.loader.js";
+      var loaderUrl = buildUrl + "/What Roaches Carry.loader.js";
       var config = {
-        dataUrl: buildUrl + "/.git.data.br",
-        frameworkUrl: buildUrl + "/.git.framework.js.br",
-        codeUrl: buildUrl + "/.git.wasm.br",
+        dataUrl: buildUrl + "/What Roaches Carry.data.br",
+        frameworkUrl: buildUrl + "/What Roaches Carry.framework.js.br",
+        codeUrl: buildUrl + "/What Roaches Carry.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "What Roaches Carry",
