--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/What Roaches Carry.loader.js";
       var config = {
-        dataUrl: buildUrl + "/What Roaches Carry.data.br",
-        frameworkUrl: buildUrl + "/What Roaches Carry.framework.js.br",
-        codeUrl: buildUrl + "/What Roaches Carry.wasm.br",
+        dataUrl: buildUrl + "/What Roaches Carry.data",
+        frameworkUrl: buildUrl + "/What Roaches Carry.framework.js",
+        codeUrl: buildUrl + "/What Roaches Carry.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "What Roaches Carry",
